--- a/sass/base/_grids.scss
+++ b/sass/base/_grids.scss
@@ -2,8 +2,8 @@
 // Grid Backgrounds
 
 $grid-background-baseline-height  : $base-line-height;
-$grid-background-baseline-color   : rgba($base1,.25);
-$grid-background-column-color     : rgba($base2,.25);
+$grid-background-baseline-color   : rgba($base,.25);
+$grid-background-column-color     : rgba($alt,.25);
 
 $show-column-grid-backgrounds     : true;
 $show-baseline-grid-backgrounds   : true;
