--- a/sass/general/_type.scss
+++ b/sass/general/_type.scss
@@ -27,20 +27,21 @@ a {
 // ----
 
 %type {
-  h1 {
-    @include adjust-font-size-to($largepx);
+  h2 {
+    @include serif;
+    @include adjust-font-size-to($xlargepx);
     a {
       #{$link} { color: color($alt dark); }
       #{$focus} { color: color($accent dark); }
     }
   }
 
-  h2 {
+  h3 {
     @include trailer(.5);
     text-transform: uppercase;
   }
 
-  h3, h4, strong { font-weight: bold; }
+  h4, strong { font-weight: bold; }
   em { font-style: italic; }
 
   p, ul, ol, pre { @include trailer; }
