--- a/sass/modules/_demo.scss
+++ b/sass/modules/_demo.scss
@@ -20,6 +20,8 @@ $steps: teacher-login learner-login topic-select learning-session results profil
 
 .demo {
   @extend %type;
+  min-height: 100%;
+  background: color(white,.25);
   counter-reset: demo;
 
   button, .next-button { @extend %button; }
@@ -42,6 +44,7 @@ $steps: teacher-login learner-login topic-select learning-session results profil
   @include border-radius(.25em);
   clear: both;
   border-color: $orange;
+  background: color(white,.5);
 }
 
 // Steps
@@ -49,18 +52,21 @@ $steps: teacher-login learner-login topic-select learning-session results profil
 
 .step {
   @include pie-clearfix;
-  @include leading-border(2px,.25);
+  @include leader;
+  position: relative;
   counter-increment: demo;
 
   h2 {
-    @include before(unquote('"Step " counter(demo) ": "')) {
-      font-weight: normal;
+    @include leading-border(2px,.5);
+    @include trailer(.5);
+    border-top: 2px dotted color($blue,.25);
+    color: color($accent);
+    @include before(unquote('counter(demo) " : "')) {
       color: color(light);
+      text-transform: uppercase;
     }
   }
 
-  [class$="-content"] {
-  }
 }
 
 // Learning Session
@@ -70,6 +76,7 @@ $steps: teacher-login learner-login topic-select learning-session results profil
   @include pie-clearfix;
   @include trailer;
   border: 1px solid;
+  background: color(white,.75);
   .work {
     float: left;
     width: space(5);
