--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -168,19 +168,23 @@ html {
 
 html {
   font-family: "CambridgeRound", "Helvetica Neue", Arial, Helvetica, sans-serif;
-  color: #657b83;
-  background: white;
+  color: #005e5e;
+  background: rgba(123, 211, 211, 0.25);
+}
+
+html, body {
+  height: 100%;
 }
 
 a:hover, a:active {
   outline: none;
 }
 a:link, a:visited {
-  color: #268bd2;
+  color: #009191;
   text-decoration: none;
 }
 a:focus, a:hover, a:active {
-  color: #d33682;
+  color: #94001a;
 }
 
 .amp {
@@ -194,24 +198,25 @@ a:focus, a:hover, a:active {
   left: -9999px;
 }
 
-.demo h1 {
-  font-size: 35px;
-  font-size: 1.94444rem;
-  line-height: 46px;
-  line-height: 2.55556rem;
-}
-.demo h1 a:link, .demo h1 a:visited {
-  color: #1e6fa8;
-}
-.demo h1 a:focus, .demo h1 a:hover, .demo h1 a:active {
-  color: #a82b68;
-}
 .demo h2 {
+  font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 44px;
+  font-size: 2.44444rem;
+  line-height: 58px;
+  line-height: 3.19444rem;
+}
+.demo h2 a:link, .demo h2 a:visited {
+  color: #007474;
+}
+.demo h2 a:focus, .demo h2 a:hover, .demo h2 a:active {
+  color: #760014;
+}
+.demo h3 {
   margin-bottom: 12px;
   margin-bottom: 0.63889rem;
   text-transform: uppercase;
 }
-.demo h3, .demo h4, .demo strong {
+.demo h4, .demo strong {
   font-weight: bold;
 }
 .demo em {
@@ -234,19 +239,19 @@ a:focus, a:hover, a:active {
 .demo code {
   display: inline-block;
   padding: 0 .5em;
-  background: rgba(22, 83, 126, 0.125);
+  background: rgba(0, 87, 87, 0.125);
 }
 .demo .code {
   line-height: 17px;
   line-height: 0.95833rem;
   margin-bottom: 23px;
   margin-bottom: 1.27778rem;
-  -webkit-box-shadow: #657b83 0 0 0.25em inset;
-  -moz-box-shadow: #657b83 0 0 0.25em inset;
-  box-shadow: #657b83 0 0 0.25em inset;
+  -webkit-box-shadow: #005e5e 0 0 0.25em inset;
+  -moz-box-shadow: #005e5e 0 0 0.25em inset;
+  box-shadow: #005e5e 0 0 0.25em inset;
   overflow: auto;
   padding: 0.63889rem 0.95833rem;
-  border-left: 0.31944rem solid rgba(7, 27, 41, 0.25);
+  border-left: 0.31944rem solid rgba(0, 28, 28, 0.25);
 }
 
 /* Use the following CSS code if you want to have a class per icon */
@@ -270,10 +275,10 @@ a:focus, a:hover, a:active {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  background-image: -webkit-linear-gradient(top, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -moz-linear-gradient(top, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -o-linear-gradient(top, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: linear-gradient(to bottom, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -webkit-linear-gradient(top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -moz-linear-gradient(top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -o-linear-gradient(top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: linear-gradient(to bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
   display: inline-block;
   padding-left: 0.63889rem;
   padding-right: 0.63889rem;
@@ -281,24 +286,24 @@ a:focus, a:hover, a:active {
 }
 
 .demo button:hover, .demo .next-button:hover, .demo button:focus, .demo .next-button:focus {
-  -webkit-box-shadow: rgba(124, 185, 228, 0.25) 0 0 0.31944rem;
-  -moz-box-shadow: rgba(124, 185, 228, 0.25) 0 0 0.31944rem;
-  box-shadow: rgba(124, 185, 228, 0.25) 0 0 0.31944rem;
+  -webkit-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
+  -moz-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
+  box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
 }
 
 .demo button:active, .demo .next-button:active {
-  -webkit-box-shadow: #657b83 0 0 0.31944rem inset;
-  -moz-box-shadow: #657b83 0 0 0.31944rem inset;
-  box-shadow: #657b83 0 0 0.31944rem inset;
-  background-image: -webkit-linear-gradient(bottom, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -moz-linear-gradient(bottom, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -o-linear-gradient(bottom, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: linear-gradient(to top, rgba(101, 123, 131, 0) 40%, rgba(229, 229, 229, 0.25));
+  -webkit-box-shadow: #005e5e 0 0 0.31944rem inset;
+  -moz-box-shadow: #005e5e 0 0 0.31944rem inset;
+  box-shadow: #005e5e 0 0 0.31944rem inset;
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -moz-linear-gradient(bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -o-linear-gradient(bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: linear-gradient(to top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
 }
 
 .demo button:disabled {
   opacity: .5;
-  background: rgba(240, 231, 204, 0.5);
+  background: rgba(252, 238, 204, 0.5);
   cursor: default;
 }
 .demo button:focus:disabled, .demo button:hover:disabled, .demo button:active:disabled {
@@ -397,7 +402,7 @@ button {
   margin-left: 1em;
 }
 [role="banner"] .vcard.empty {
-  opacity: 0;
+  display: none;
 }
 
 [role="main"] {
@@ -406,9 +411,7 @@ button {
   padding-right: 0;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 69px;
-  margin-top: 3.83333rem;
-  padding: 0 1em;
+  padding: 3.83333rem 1em;
 }
 [role="main"]:after {
   content: "";
@@ -458,10 +461,12 @@ button {
 }
 
 .demo {
+  min-height: 100%;
+  background: rgba(255, 255, 255, 0.25);
   counter-reset: demo;
 }
 .demo .next-button {
-  background-color: #e6eacc;
+  background-color: #d8f5cc;
 }
 .demo .label {
   margin-bottom: 0px;
@@ -488,7 +493,8 @@ button {
   -moz-border-radius: 0.25em;
   border-radius: 0.25em;
   clear: both;
-  border-color: #cb4b16;
+  border-color: #f26e00;
+  background: rgba(255, 255, 255, 0.5);
 }
 .instructions:before {
   content: " ";
@@ -498,18 +504,16 @@ button {
   border: solid transparent;
   pointer-events: none;
   bottom: 100%;
-  border-bottom-color: #cb4b16;
+  border-bottom-color: #f26e00;
   border-width: 0.5em;
   left: 50%;
   margin-left: -0.5em;
 }
 
 .step {
-  border-top-width: 2px;
-  border-top-width: 0.11111rem;
-  border-top-style: solid;
-  padding-top: 4px;
-  padding-top: 0.20833rem;
+  margin-top: 23px;
+  margin-top: 1.27778rem;
+  position: relative;
   counter-increment: demo;
 }
 .step:after {
@@ -517,16 +521,28 @@ button {
   display: table;
   clear: both;
 }
+.step h2 {
+  border-top-width: 2px;
+  border-top-width: 0.11111rem;
+  border-top-style: solid;
+  padding-top: 10px;
+  padding-top: 0.52778rem;
+  margin-bottom: 12px;
+  margin-bottom: 0.63889rem;
+  border-top: 2px dotted rgba(0, 145, 145, 0.25);
+  color: #94001a;
+}
 .step h2:before {
-  content: "Step " counter(demo) ": ";
-  font-weight: normal;
+  content: counter(demo) " : ";
   color: #999999;
+  text-transform: uppercase;
 }
 
 .collaborate {
   margin-bottom: 23px;
   margin-bottom: 1.27778rem;
   border: 1px solid;
+  background: rgba(255, 255, 255, 0.75);
 }
 .collaborate:after {
   content: "";
@@ -584,10 +600,10 @@ button {
   line-height: 1.27778rem;
 }
 .feedback-item.positive button {
-  background-color: rgba(230, 234, 204, 0.5);
+  background-color: rgba(216, 245, 204, 0.5);
 }
 .feedback-item.negative button {
-  background-color: rgba(248, 214, 213, 0.5);
+  background-color: rgba(249, 204, 212, 0.5);
 }
 .feedback-item [class$="-count"] {
   font-size: 23px;
@@ -620,7 +636,7 @@ button {
   padding: 0.31944rem;
 }
 .results-table .yay {
-  color: #6a7a00;
+  color: #31a600;
 }
 .results-table .yay .after {
   font-weight: bold;
