consistently display teacher and learner names

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -9,11 +9,11 @@
   <div class="meta">
     <p class="vcard teacher empty">
       <b class="title">Teacher</b>:
-      <span class="fn"></span>
+      <span class="fn teacher-name"></span>
     </p>
     <p class="vcard learner empty">
       <b class="title">Learner</b>:
-      <span class="fn"></span>
+      <span class="fn learner-name"></span>
     </p>
   </div>
 </header>
