--- a/templates/demo.html
+++ b/templates/demo.html
@@ -3,7 +3,7 @@
 {% block body %}
 <header role="banner">
   <div class="branding">
-    <h1 class="logo">The K Network</h1>
+    <h1 class="company">The K Network</h1>
     <h2 class="pagetitle">What's Possible</h2>
   </div>
   <div class="meta">
@@ -19,6 +19,12 @@
 </header>
 
 <article role="main" class="demo">
+
+  <header>
+    <h1 class="logo">The K Network</h1>
+    <p class="tagline">exploring what's possible in the world of teaching and learning</p>
+    <p class="intro">The following 6 steps, plus some imagination, should give you a sense of the value to education The K Network can provide.</p>
+  </header>
 
   <input type="radio" name="steps" id="teacher-login-toggle" checked>
   <input type="radio" name="steps" id="learner-login-toggle">
