more wording fixes

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -245,7 +245,7 @@
 
       <label for="profiles-toggle" class="next-button">Next</label>
       <p class="instructions">
-        Soft data also feeds into profiles, showing cumulative success (next step).
+        All data also feeds into profiles, showing cumulative success (next step).
         Press the Next button when ready.
       </p>
     </div>
@@ -296,7 +296,7 @@
       </div>
 
       <p class="instructions">
-        “Hard Data” stats and “Soft Data” Stats go into user profile system.
+        “Hard Data” stats and “Soft Data” stats go into the user profile system.
         Teachers can use their profile for applying in the teaching industry.
         Learners can use their profile to show they have the character traits
         that mean they are good to work with, worthy of their first job, etc.
