--- a/templates/demo.html
+++ b/templates/demo.html
@@ -51,6 +51,7 @@
   <div class="step">
     <h2><label for="learner-login-toggle">Learner Login</label></h2>
     <div class="learner-login-content">
+      <img src="{{ STATIC_URL }}images/Khan-Login.png" alt="" />
       <p class="label">As a <strong>learner</strong>, log into Khan Academy:</p>
       <label for="topic-select-toggle" class="next-button">Login with Google</label>
       <label for="topic-select-toggle" class="next-button">Login with Facebook</label>
