--- a/templates/demo.html
+++ b/templates/demo.html
@@ -48,10 +48,10 @@
   <div class="step">
     <h2><label for="learner-login-toggle">Learner Login</label></h2>
     <div class="learner-login-content">
-      <img src="{{ STATIC_URL }}images/Khan-Login.png" alt="" />
       <p class="label">As a <strong>learner</strong>, log into Khan Academy:</p>
-      <label for="topic-select-toggle" class="next-button">Login with Google</label>
-      <label for="topic-select-toggle" class="next-button">Login with Facebook</label>
+      <label for="topic-select-toggle">
+        <img src="{{ STATIC_URL }}images/Khan-Login.png" alt="" />
+      </label>
       <p class="instructions">
         Pretend your learner (Peter K) has logged in through Khan Academy.
         Press one of the learner buttons for Peter.
