add note to step 2 instructions

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -55,6 +55,8 @@
       <p class="instructions">
         Pretend your learner (Peter K) has logged in through Khan Academy.
         Press one of the learner buttons for Peter.
+        NOTE: Learners will have K Network accounts.
+        The final product will include writing, languages, and other non-Khan Academy options for learning.
       </p>
     </div>
   </div>
