--- a/sass/general/_root.scss
+++ b/sass/general/_root.scss
@@ -18,6 +18,8 @@ html {
 
 html, body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 // ----------------------------------------------------------------------------
