--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1,7 +1,7 @@
 .demo [id*="teacher-login"], .demo [id*="learner-login"], .demo [id*="topic-select"], .demo [id*="learning-session"], .demo [id*="results"], .demo [id*="profiles"], .demo [id*="relationships"] {
   position: absolute;
-  top: -9999px;
   left: -9999px;
+  opacity: 0;
 }
 
 html, body, div, span, applet, object, iframe,
@@ -174,6 +174,8 @@ html {
 
 html, body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a:hover, a:active {
@@ -233,6 +235,9 @@ a:focus, a:hover, a:active {
 .demo ul {
   list-style: disc;
 }
+.demo ol {
+  list-style: decimal;
+}
 .demo code, .demo .code {
   font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
   font-size: 12px;
@@ -270,7 +275,7 @@ a:focus, a:hover, a:active {
   content: attr(data-icon);
 }
 
-.demo button, .demo .next-button {
+.signup button, .demo button, .demo .next-button {
   border-width: 1px;
   border-width: 0.05556rem;
   border-style: solid;
@@ -289,13 +294,13 @@ a:focus, a:hover, a:active {
   cursor: pointer;
 }
 
-.demo button:hover, .demo .next-button:hover, .demo button:focus, .demo .next-button:focus {
+.signup button:hover, .demo button:hover, .demo .next-button:hover, .signup button:focus, .demo button:focus, .demo .next-button:focus {
   -webkit-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   -moz-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
 }
 
-.demo button:active, .demo .next-button:active {
+.signup button:active, .demo button:active, .demo .next-button:active {
   -webkit-box-shadow: #005e5e 0 0 0.31944rem inset;
   -moz-box-shadow: #005e5e 0 0 0.31944rem inset;
   box-shadow: #005e5e 0 0 0.31944rem inset;
@@ -455,6 +460,119 @@ button {
 
 .landing {
   max-width: 60em;
+}
+.landing header {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+.call-to-action {
+  padding-left: 51.02041%;
+  padding-right: 0%;
+  padding-top: 46px;
+  padding-top: 2.55556rem;
+  margin-bottom: 46px;
+  margin-bottom: 2.55556rem;
+  background: url('../images/wordmark.svg?1366751994') no-repeat scroll bottom;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  padding-bottom: 15%;
+}
+
+.intro {
+  font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  font-size: 1.77778rem;
+  line-height: 46px;
+  line-height: 2.55556rem;
+  margin-bottom: 23px;
+  margin-bottom: 1.27778rem;
+}
+
+.signup {
+  margin-bottom: 23px;
+  margin-bottom: 1.27778rem;
+}
+.signup:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.signup label {
+  font-style: italic;
+}
+.signup input {
+  width: 58.33333%;
+  float: left;
+  margin-right: 4.16667%;
+}
+.signup button {
+  width: 37.5%;
+  float: right;
+  margin-right: 0;
+  font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  background-color: #d8f5cc;
+  border-color: #33a7a7;
+  font-weight: bold;
+}
+
+.desc {
+  border-width: 1px;
+  border-width: 0.05556rem;
+  border-style: solid;
+  padding: 22px;
+  padding: 1.22222rem;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  margin-left: -2.55556rem;
+  padding-left: 2.55556rem;
+  margin-right: -2.55556rem;
+  padding-right: 2.55556rem;
+  -webkit-box-shadow: inset 0 0 3px #005e5e;
+  -moz-box-shadow: inset 0 0 3px #005e5e;
+  box-shadow: inset 0 0 3px #005e5e;
+  background: rgba(102, 158, 158, 0.25);
+}
+.desc:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.desc h2 {
+  font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 23px;
+  font-size: 1.27778rem;
+  line-height: 35px;
+  line-height: 1.91667rem;
+  margin-bottom: 12px;
+  margin-bottom: 0.63889rem;
+  font-weight: bold;
+}
+.desc ol {
+  padding-left: 1.27778rem;
+  list-style: decimal;
+}
+.desc p {
+  margin-bottom: 23px;
+  margin-bottom: 1.27778rem;
+}
+
+.metrics {
+  width: 48.97959%;
+  float: left;
+  margin-right: 2.04082%;
+}
+
+.outro {
+  width: 48.97959%;
+  float: right;
+  margin-right: 0;
+  padding-top: 12px;
+  padding-top: 0.63889rem;
 }
 
 .demo [id*="teacher-login"], .demo [id*="learner-login"], .demo [id*="topic-select"], .demo [id*="learning-session"], .demo [id*="results"], .demo [id*="profiles"], .demo [id*="relationships"] {
