Can submit email on landing page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,11 +14,7 @@
       to inspire you and the people around you.
     </p>
 
-    <form class="signup" method="POST">
-      <label for="email">Sign up for updates when we launch</label>
-      <input type="email" id="email" placeholder="email@example.com" required />
-      <button type"submit">Sign up</button>
-    <form>
+    {% include "landing/_form.html" %}
   </div>
 
   <div class="desc">
