Add messages display.

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,15 @@
       to inspire you and the people around you.
     </p>
 
+    <ul id="messages">
+      {% for message in messages %}
+      <li class="message{% if message.tags %} {{ message.tags }}{% endif %}">
+        <p class="body">{{ message|safe }}</p>
+        <a href="#" class="close">close</a>
+      </li>
+      {% endfor %}
+    </ul>
+
     {% include "landing/_form.html" %}
   </div>
 
